Fixed hidden footer buttons covering list items

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,6 +29,11 @@ body {
       padding-top: 10px;
     }
 
+    main {
+      overflow: overlay;
+      height: 80%;
+    }
+
     h1 {
       font-size: $h1Font;
       color: #FEC260;
@@ -146,12 +151,12 @@ body {
     .transparent {
       pointer-events: none;
       opacity: 0;
+      display: none !important;
     }
 
     footer {
       position: absolute;
       bottom: 0;
-      padding-bottom: 20px;
       width: 100%;
       display: flex;
       flex-direction: column;
